@@ -794,7 +794,8 @@ void process_user_Renviron();
 SEXP promiseArgs(SEXP, SEXP);
 void Rcons_vprintf(const char *, va_list);
 void RemoveClass(SEXP, char *);
-SEXP R_data_class(SEXP , int);
+SEXP R_data_class(SEXP , Rboolean);
+SEXP R_data_class2(SEXP);
 SEXP R_LoadFromFile(FILE*, int);
 SEXP R_NewHashedEnv(SEXP);
 extern int R_Newhashpjw(char*);
